--- a/src/app/templates/home.component.html
+++ b/src/app/templates/home.component.html
@@ -39,7 +39,8 @@
     </div>
 
     <div class="footer">
-        <app-footer></app-footer>
+        <app-panic></app-panic>
     </div>
+    
 
 </div>
