--- a/src/app/templates/landing-page/landing-page.component.html
+++ b/src/app/templates/landing-page/landing-page.component.html
@@ -36,7 +36,7 @@
 
 
 
-<div class="graphic-container" fxLayout="row wrap" fxLayoutAlign="center" fxLayoutGap="2rem">
+<div class="graphic-container" fxLayout="row no-wrap" fxLayoutAlign="center" fxLayoutGap="2rem">
     
             <div class="canvas">
                 <canvas id="canvas">
@@ -44,7 +44,6 @@
                 </canvas>
               </div>
     
-      
 
     
             <div class="canvas2">
