--- a/src/app/templates/statistics/statistics.component.html
+++ b/src/app/templates/statistics/statistics.component.html
@@ -1,20 +1,64 @@
 <div class="container" fxLayout= "column nowrap" fxLayoutAlign="center center" fxLayoutGap="3rem">
+    <div class="periodo">
+        <form id="form" [formGroup]="form">
+            <mat-form-field class="month">
+                <mat-label>Mes</mat-label>
+                <input matInput type="text" formControlName="formMonth">
+            </mat-form-field>
+            <mat-form-field class="year">
+                <mat-label>Año</mat-label>
+                <input matInput type="text" formControlName="formYear">
+            </mat-form-field>
+
+            <button mat-raised-button color="primary"(click)="searchPeriodo()">Primary</button>
+        </form>
+            
+            
+    
+    </div>
 
     <div class="accounting">
-        <mat-card>
-            <mat-card-header>
-                <mat-card-title>Ingresos mensuales</mat-card-title>
-              </mat-card-header>
+        <table mat-table matSort [dataSource]='dataTable' class='mat-elevation-z8 table'>
+            <ng-container matColumnDef='number'>
+                <th mat-header-cell *matHeaderCellDef>No.</th>
+                <td mat-cell *matCellDef='let element;index as index'>{{index+1}}</td>
+                <td mat-footer-cell *matFooterCellDef> Total </td>
+            </ng-container>
+        
+            <!-- Column -->
+            <ng-container matColumnDef='date'>
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Fecha</th>
+                <td mat-cell *matCellDef='let element'> {{element.date | date: 'dd/MM/yyyy'}} </td>
+                <td mat-footer-cell *matFooterCellDef></td>
+            </ng-container>
+        
+            <!-- Column -->
+            <ng-container matColumnDef='payForm'>
+                <th mat-header-cell *matHeaderCellDef>Forma de pago</th>
+                <td mat-cell *matCellDef='let element'> {{element.payForm}} </td>
+                <td mat-footer-cell *matFooterCellDef></td>
+            </ng-container>
 
-              <mat-card-content>
-                  <h3>Dentro de la card de contabilidad</h3>
-              </mat-card-content>
-        </mat-card>
+            <!-- Column -->
+            <ng-container matColumnDef='account'>
+                <th mat-header-cell *matHeaderCellDef>Monto</th>
+                <td mat-cell *matCellDef='let element'> {{element.account | currency}} </td>
+                <td mat-footer-cell *matFooterCellDef> {{getTotalCost() | currency}} </td>
+            </ng-container>
+        
+        
+        
+        
+            <tr mat-header-row *matHeaderRowDef='displayedColumns'></tr>
+        
+        
+            <tr mat-row *matRowDef='let row; columns: displayedColumns;'></tr>
+            <tr mat-footer-row *matFooterRowDef="displayedColumns"></tr>
+           
+        </table>
     </div>
-    <div class="graph">
-        <h3>Graphic</h3>
-    </div>
+    
 
 </div>
 
-<app-panic></app-panic>
+
